--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Rock Paper Scissors</h1>
-    <script src="script.js"></script>
+    <div id="menu">
+        <h1 id="heading">Choose Your Weapon</h1>
+    </div>
+    <div id="weapon-holder">
+        <div class="sword weapon"></div>
+        <div class="spear weapon"></div>
+        <div class="shield weapon"></div>
+    </div>
+    <div id="leaves">
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i>
+        <i></i> 
+      </div>
 </body>
 </html>
