--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="leaves.css">
 </head>
 <body>
     <div id="menu">
         <h1 id="heading">Choose Your Weapon</h1>
     </div>
     <div id="weapon-holder">
-        <div class="sword weapon"></div>
-        <div class="spear weapon"></div>
-        <div class="shield weapon"></div>
+        <div id="katana">
+            <div class="ring"></div>
+            <div><img src="./images/katana.png" id="kimg"></div>
+        </div>
+        <div id="spear">
+            <div class="ring"></div>
+            <div><img src="./images/spear.png" id="simg"></div>
+        </div>
+        <div id="shield">
+            <div class="ring"></div>
+            <div><img src="./images/shield.png" id="ssimg"></div>
+        </div>
     </div>
     <div id="leaves">
         <i></i>
