--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <h1 id="heading">Choose Your Weapon</h1>
     </div>
     <div id="weapon-holder">
-        <div id="katana">
+        <div id="katana" class="weapon">
             <div class="ring"></div>
             <div><img src="./images/katana.png" id="kimg"></div>
         </div>
-        <div id="spear">
+        <div id="spear" class="weapon">
             <div class="ring"></div>
             <div><img src="./images/spear.png" id="simg"></div>
         </div>
-        <div id="shield">
+        <div id="shield" class="weapon">
             <div class="ring"></div>
             <div><img src="./images/shield.png" id="ssimg"></div>
         </div>
@@ -42,5 +42,6 @@
         <i></i>
         <i></i> 
       </div>
-</body>
+      <script src="script.js"></script>
+    </body>
 </html>
