pre splash screen

--- a/index.html
+++ b/index.html
@@ -11,20 +11,25 @@
     <div id="menu">
         <h1 id="heading">Choose Your Weapon</h1>
     </div>
+    <h2 id="choice">Katana</h2>
     <div id="weapon-holder">
         <div id="katana" class="weapon">
+            <h2 id="katana-head" class="head">Katana</h2>
             <div class="ring"></div>
             <div><img src="./images/katana.png" id="kimg"></div>
         </div>
         <div id="spear" class="weapon">
+            <h2 id="spear-head" class="head">Spear</h2>
             <div class="ring"></div>
             <div><img src="./images/spear.png" id="simg"></div>
         </div>
         <div id="shield" class="weapon">
+            <h2 id="shield-head" class="head">Shield</h2>
             <div class="ring"></div>
             <div><img src="./images/shield.png" id="ssimg"></div>
         </div>
     </div>
+    
     <div id="leaves">
         <i></i>
         <i></i>
