added closing doors
I hate this i hate this so so much like whyy tf this took so much time like hell na i never wanna do this sheet again.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="leaves.css">
 </head>
 <body>
+    <div id="main"></div>
     <div id="menu">
         <h1 id="heading">Choose Your Weapon</h1>
     </div>
@@ -29,7 +30,6 @@
             <div><img src="./images/shield.png" id="ssimg"></div>
         </div>
     </div>
-    
     <div id="leaves">
         <i></i>
         <i></i>
