--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="leaves.css">
 </head>
 <body>
-    <div id="main"></div>
+    <div id="main">
+    </div>
     <div id="menu">
         <h1 id="heading">Choose Your Weapon</h1>
     </div>
