--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+    <title>The Shadow Fighter</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="leaves.css">
 </head>
 <body>
-    <div id="main">
-    </div>
+    <div class="slideshow" id="slideshow"></div>
     <div id="menu">
         <h1 id="heading">Choose Your Weapon</h1>
     </div>
@@ -32,21 +31,21 @@
         </div>
     </div>
     <div id="leaves">
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i>
-        <i></i> 
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i>
+        <i class="leaf"></i> 
       </div>
       <script src="script.js"></script>
     </body>
